opam-version: "1.2"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:       ["David Sheets" "Thomas Gazagnaire" "Qi Li" "Anil Madhavapeddy"]
homepage:      "https://github.com/ocamllabs/ocaml-scry"
bug-reports:   "https://github.com/ocamllabs/ocaml-scry/issues/"
dev-repo:      "https://github.com/ocamllabs/ocaml-scry.git"
license:       "ISC"

build: [
  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "ppx_sexp_conv" {build}
  "sexplib"
  "re"
  "cmdliner"
  "uri"
]
